dodano info o pustej nazwie gracza

--- a/languages/ENG.lang
+++ b/languages/ENG.lang
@@ -12,3 +12,4 @@ MATCH_DRAW : Draw %points%
 MATCH_WINNER : Winner %player%. %points%
 GAME_WINNER : Winner: %winner% points: %winner_points% \nLoser: %loser% points: %loser_points%\n
 GAME_DRAW : Draw! Points: %points%
+EMPTY_PLAYER_NAME : Player name cannot be empty
